force-app/main/default/objects/Feedback_Rating__c/Feedback_Rating__c.object-meta.xml
<CustomObject>
    <label>Feedback Rating</label>
    <nameField>
        <label>Feedback Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>