force-app/main/default/objects/Feedback_Rating__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Feedback Ratings</relationshipLabel>
    <relationshipName>Feedback_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>