force-app/main/default/objects/Feedback_Rating__c/fields/Date_of_Rating__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Rating__c</fullName>
    <label>Date of Rating</label>
    <type>Date</type>
</CustomField>