force-app/main/default/objects/Feedback_Rating__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Feedback Ratings</relationshipLabel>
    <relationshipName>Feedback_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>