force-app/main/default/objects/Feedback_Rating__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Very Satisfactory</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>